adding new paragraph via branch (MainCopy)

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam unde omnis dignissimos quisquam a quae, natus earum commodi aspernatur consectetur, ex libero laborum, ad accusamus perferendis iure repudiandae? Beatae, expedita.
         </p>
+        <h2>
+            This is the branch copy file
+        </h2>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo aspernatur voluptate exercitationem iusto veniam, doloribus voluptatum tenetur numquam quae reprehenderit aut ex quo velit minima voluptas excepturi nemo error non?
+        </p>
     </div>
 
 </body>
